fix(BlogPost): Loading bar hidden by nav

--- a/web/src/components/Common/BlogPost/BlogPost.module.scss
+++ b/web/src/components/Common/BlogPost/BlogPost.module.scss
@@ -61,7 +61,7 @@
   width: 10%;
   height: 3px;
   position: fixed;
-  top: 52px;
+  top: 58px;
   background-color: $color-primary-yellow;
   z-index: 100;
 }
